# monospace-web-python

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/src/: index.css
scripts/: build.py
static/: index.css
tests/: index.md  test_replication.py
