[project]
name = "monospace-web-python"
version = "1.0.0"
description = "A Python-Jinja2 replication of the-monospace-web by owickstrom"
authors = [
    {name = "Christopher C. Smith", email = "christopher.smith@promptlytechnologies.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.5.1",
    "Jinja2>=3.1.2",
    "PyYAML>=6.0.1",
    "python-frontmatter>=1.0.0",
    "Pillow>=10.1.0"
]

[project.urls]
Homepage = "https://christophercarrollsmith/monospace-web-python"
Repository = "https://github.com/chriscarrollsmith/monospace-web-python"

[tool.uv]
dev-dependencies = [] 